# MdCSS

./: .gitignore  README.md  builder.py  config.example.json  config.py  flake.nix  font.py  mdcss.py  module.nix  pixi.toml  print_style.py  pyproject.toml  template.py
docs/: SYNTAX.md
src/: builder.py  config.py  print_style.py  template.py
templates/css/: heading_underline.css  printstyle.css  style.css
templates/docheader/: expand_detail.js
templates/js/: postparser_imagetitle.js  postparser_table.js  preparser_column.js  preparser_fence_extract.js  preparser_fence_restore.js  preparser_pdf.js
templates/parser/: postparser_image.js  postparser_tablecaption.js  preparser_column.js  preparser_fence_extract.js  preparser_fence_restore.js  preparser_indent.js  preparser_titleprefix.js
test_md/: 表格测试.md  长md文件.md  长代码.md
tests/: conftest.py  test_builder.py  test_config.py  test_font.py  test_print_style.py  test_template.py
