[project]
name = "MdMisc"
version = "0.1.0"
description = "Generate Crossnote style.less with more features"
authors = [{name = "suif4599", email = "suif4599@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "cssutils>=2.15.0,<3",
    "fonttools>=4.63.0,<5",
    "jsbeautifier>=1.15.4,<2",
    "cssbeautifier>=1.15.4,<2",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"